# connecto-db

./: .gitignore  README.md
.github/workflows/: dotnet-client.yml  go-client.yml  java-client.yml  rust-client.yml  server-docker.yml  server-release.yml  typescript-client.yml
clients/dotnet/: .gitignore
clients/dotnet/Connecto.Client/: Connecto.Client.csproj  ConnectoClient.cs  Models.cs
clients/go/connecto/: client.go  go.mod  hub.go  types.go
clients/java/: .gitignore  pom.xml
clients/rust/connecto-client/: Cargo.toml
clients/rust/connecto-client/src/: client.rs  hub.rs  lib.rs  types.rs
clients/typescript/: package.json  tsconfig.json
clients/typescript/src/: connecto-client.ts  index.ts  types.ts
server/: .dockerignore  .gitignore  Config.cs  Dockerfile  Program.cs  Utils.cs  connecto.server.csproj  connecto.server.http
server/Controllers/: AuthController.cs  BaseController.cs  TablesController.cs
server/Data/: AppDbContext.cs
server/Hubs/: BaseHub.cs  CollectionStreamHub.cs  DataStreamHub.cs  TableStreamHub.cs
server/Models/: FlexMap.cs  User.cs
server/Models/Data/: FlexMap.cs  User.cs
server/Models/Req/: LoginReq.cs  RegisterReq.cs
server/Models/Res/: AuthRes.cs  GenericRes.cs  UserRes.cs
server/Properties/: launchSettings.json
server/Services/: AuthService.cs  CollectionService.cs  DataService.cs  TableService.cs
server/connecto.server/: .gitignore  Program.cs  connecto.server.csproj  connecto.server.sln
server/connecto.server/Models/: FlexMap.cs
server/connecto.server/Properties/: launchSettings.json
(+6 files in other folders)
